--- a/web_app/templates/new_book.html
+++ b/web_app/templates/new_book.html
@@ -8,23 +8,25 @@
 <body>
     
     {% extends "layout.html" %}
+
     {% block content %}
     
         <h1>New Book Page</h1>
-        
-        <P>Please fill out form and submit to create a new book!</P>
-
-        <form action="/books/creat", method="POST">
-        
+    
+        <p>Please fill out the form and submit to create a new book!</p>
+    
+        <form action="/books/create" method="POST">
+    
             <label>Title:</label>
             <input type="text" name="book_title" placeholder="Book XYZ" value="Book XYZ">
-            
+    
             <label>Author:</label>
-            <select name="auther_name">
-                <option value="A1">Auther 1</option>
-                <option value="A2">Auther 2</option>
-                <option value="A3">Auther 3</option>
+            <select name="author_name">
+              <option value="A1">Author 1</option>
+              <option value="A2">Author 2</option>
+              <option value="A3">Author 3</option>
             </select>
+    
             <button>Submit</button>
         </form>
     {% endblock %}
